--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,27 @@ jobs:
     name: push docker image to hub
     runs-on: ubuntu-latest
     steps:
-      - name: check repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: login to docker registry
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{secrets.DOCKERHUB_USERNAME}}
-          password: ${{secrets.DOCKERHUB_TOKEN}}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: build and push docker image to registry
-        uses: docker/build-push-action@v5
+      - name: Build and push
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: containerman17/hypersdk-explorer:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
